--- a/Services.html
+++ b/Services.html
@@ -10,7 +10,7 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training">
 		<meta name="description" content="Hickory Web Design Individual Services">
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
 </head>
 <!--____________________________________________________________Navigation______________________________________________________________--!>
@@ -18,64 +18,60 @@
 <Body>
 
 <div class="navbar">
-	<a href="index.html">
-		<img src="img/FullLogo.png" alt="Hickory Web Designs Logo" id="mainLogo" />
-	</a>
-	<input type="text" placeholder="Search...">
+
+	<div class='section logo'>
+
+			<a href="index.html"> <img src="img/FullLogo.png" alt="Hickory Web Designs Logo" class="mainLogo" /> </a>
+
+	</div>
+
+
 
   	<div class="dropdown">
-    		<button class="dropbtn">&#9776; Menu
-     		 <i class="fa fa-caret-down"></i>
-    		</button>
+		<div class='section navMenu'>
+    		<button class="dropbtn"> &#9776; Menu </button>
+		</div>
    			 <div class="dropdown-content">
 					<a href="index.html"> Home</a>
 					<a href="Packages.html"> Packages </a>
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
-					<a href="ContactUs.html"> Contact Us </a>
+					<a href="Contact.html"> Contact Us </a>
+					<a href="SvcInfo.html"> Q&A </a>
     			</div>
 	
   	</div> 
 
 </div>
 
-<hr class="style-eight">
-
 <!--_______________________________________________BODY_____________________________________________________________--!>
 
+<div class='page'>	
 
-	<div class="col-3"> &nbsp; </div>
-	<div class="col-6 Heading">
+	
+	<div class='section header'>	
+
 
  			<h1> Services </h1>
-	</div>	
 
-	<div class="col-12"> &nbsp; </div>
-	
-	<div class="col-2"> &nbsp; </div>
-	
-	<div class="col-8 Body">
+	</div>
+
+	<div class='section content'>
 
 		<p> All services can be purchased individually or added on as packaged deals. Custom packages may be created. 
 		For more information about custom packages, please e-mail Jordon at jordon.r.meredith@gmail.com </p>
 
-	</div>
-
-	<div class="col-12"> &nbsp; </div>
-
 	
+
+	</div>
 
 <!--__________________________________________________________________________________________--!>
 	
-	<div class="col-2"> &nbsp; </div>
-
-	<div class="col-8 Body">
+	<div class='section content'>
 
 		<h2> Web Services </h2>
-
-		<div class="col-1"> &nbsp; </div>
-
-		<div class="col-10 Blu">
+		
+		<div class='section servs'>
 		
 			<p class="important"> Basic Web Build </p>
 			Have a custom HTML or host provided website built based on content provided directly from you. Simply provide desired color scheme, simple layout design, and pre-written content. The rest is done for you! Basic Web Build covers up to 5 web pages with basic functionality. 
@@ -86,11 +82,7 @@
 	
 		</div>
 
-		<div class="col-12"> &nbsp; </div>
-
-		<div class="col-1"> &nbsp; </div>
-
-		<div class="col-10 Blu">
+		<div class='section servs'>
 	
 			<p class="important"> Web Analytics </p>
 			Add Web Analytics to a pre-existing site and have a 1 hour training seminar for up to 5 people.
@@ -101,11 +93,8 @@
 
 		</div>
 
-		<div class="col-12"> &nbsp; </div>
-
-		<div class="col-1"> &nbsp; </div>
-
-		<div class="col-10 Blu">
+		<div class='section servs'>
+	
 
 	
 			<p class="important"> Web Exposure </p>
@@ -118,24 +107,17 @@
 			Cost: $39.99
 
 		</div>
-
 	</div>
-
-	<div class="col-12"> &nbsp; </div>
-
 	
 
 <!--__________________________________________________________________________________________--!>
 	
-	<div class="col-2"> &nbsp; </div>
+	<div class='section content'>
 
-	<div class="col-8 Body">
 
-		<h2> Mobile Application Services </h2>
+	<h2> Mobile Application Services </h2>
 
-		<div class="col-1"> &nbsp; </div>
-
-		<div class="col-10 Blu">
+		<div class='section servs'>
 
 			<p class="important"> Mobile Application Development (coming soon) </p>
 			Have a basic, interactive mobile app built to compliment your site. Mobile apps are a great way
@@ -145,23 +127,16 @@
 
 		</div>
 	</div>
-
-
-
-	<div class="col-12"> &nbsp; </div>
-
+	
 
 <!--__________________________________________________________________________________________--!>
-
-	<div class="col-2"> &nbsp; </div>
-	<div class="col-8 Body">
-
-		<h2> Microsoft Office Services </h2>
+	
+	<div class='section content'>
 
 	
-		<div class="col-1"> &nbsp; </div>
+		<h2> Microsoft Office Services </h2>
 
-		<div class="col-10 Blu">
+		<div class='section servs'>	
 
 			<p class="important"> MS Office Spreadsheet Creation </p>
 			Have re-usable templates created to make organizing data simple. This service does not
@@ -171,11 +146,7 @@
 
 		</div>
 
-		<div class="col-12"> &nbsp; </div>
-
-		<div class="col-1"> &nbsp; </div>
-
-		<div class="col-10 Blu">
+		<div class='section servs'>	
 
 			<p class="important"> ADVANCED MS Office Spreadsheet Creation </p>
 			Microsoft Office is an amazing program with thousands of ready to use features. However,
@@ -189,11 +160,9 @@
 
 		</div>
 
-		<div class="col-12"> &nbsp; </div>
+		<div class='section servs'>		
 
-		<div class="col-1"> &nbsp; </div>
 
-		<div class="col-10 Blu">
 
 			<p class="important" id="Train2"> Office Training Seminars </p>
 			Want to learn more about office? Take one of our Microsoft (MS) Office classes to help your business succeed!
@@ -231,8 +200,25 @@
 			</ul>
 		</div>
 	</div>
-
+	
+</div>
 	<br/> <br/>
 
 	</body>
 	</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
