--- a/Packages.html
+++ b/Packages.html
@@ -10,6 +10,8 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training">
 		<meta name="description" content="Hickory Web Designs offered packages and specials">
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 </head>
 <!--____________________________________________________________Navigation______________________________________________________________--!>
