--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training, Del Rio, Texas, Southern Texas, Laughlin AFB">
 		<meta name="description" content="Hickory Web Design Home Page">
 		<meta charset="UTF-8">
-		<meta name='viewport' content='width=device-width, initial-scale=1.0> 
+		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
 </head>
 <!--____________________________________________________________Navigation______________________________________________________________--!>
 
@@ -44,7 +44,7 @@
 
 </div>
 
-<!--_______________________________________________BODY_____________________________________________________________--!>
+<!--________________________________________________________BODY________________________________________________________________--!>
 	
 <div class='page'>	
 
