--- a/Packages.html
+++ b/Packages.html
@@ -10,9 +10,7 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training">
 		<meta name="description" content="Hickory Web Designs offered packages and specials">
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-
+		<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 </head>
 <!--____________________________________________________________Navigation______________________________________________________________--!>
 
@@ -246,9 +244,9 @@
 		
 		**Monthly payments available	</p>
 	
-</div>		
+		
 	<br/> <br/>
 
-
+</div>
 	</body>
 	</html>
