--- a/SvcInfo.html
+++ b/SvcInfo.html
@@ -8,23 +8,28 @@
 
 		<meta name="author" content="Jordon Meredith">
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Design, Office Training">
-		<meta name="description" content="Hickory Web Design offered packages and specials">
+		<meta name="description" content="Hickory Web Designs Services explained">
 		<meta charset="UTF-8">
 
 </head>
+<!--____________________________________________________________Navigation______________________________________________________________-->
 
 <Body>
 
 <div class="navbar">
-	<a href="index.html">
-		<img src="img/FullLogo.png" alt="Hickory Web Designs Logo" id="mainLogo" />
-	</a>
-	<input type="text" placeholder="Search...">
+
+	<div class='section logo'>
+
+			<a href="index.html"> <img src="img/FullLogo.png" alt="Hickory Web Designs Logo" class="mainLogo" /> </a>
+
+	</div>
+
+
 
   	<div class="dropdown">
-    		<button class="dropbtn">&#9776; Menu
-     		 <i class="fa fa-caret-down"></i>
-    		</button>
+		<div class='section navMenu'>
+    		<button class="dropbtn"> &#9776; Menu </button>
+		</div>
    			 <div class="dropdown-content">
 					<a href="index.html"> Home</a>
 					<a href="Packages.html"> Packages </a>
@@ -38,28 +43,30 @@
 
 </div>
 
-<hr class="style-eight">
+<!--_______________________________________________BODY_____________________________________________________________-->
 
+<div class='page'>	
 
-<div class="HeadingBox">
-Services Explained
-	<div class="Infinity">
-	&#8766; &#8766; &#8766;
-	</div>
-</div>	
+	
+	<div class='section header'>
+	
+		<h1> Website FAQs </h1>
+	
+	</div>	
 
+	<div class='section content'>	
 
-<div id="BetterMargins">
 	<h2> Q&A </h2>
+
 
 	<p class="important"> What is web design? </p>
 
-		<p> Web design is the creation of web pages using standardized 'languages'. </p>
+		<p> Web design is the creation of web pages using standardized 'languages'. </p> <br/>
 
 	<p class="important"> What are languages? </p>
 
 		<p> Languages, when it comes to web design are programming languages. Basically, they're languages that have been
-		created to communicate with the computer. There are many languages out there that all have different purposes. </p>
+		created to communicate with the computer. There are many languages out there that all have different purposes. </p> <br/>
 
 	<p class="important"> What languages do websites use? </p>
 
@@ -73,18 +80,18 @@ Services Explained
 		These three are the most fundamental languages of web design. Other languages, such as SQL and PHP require servers and
 		databases to work with information. Adding SQL and PHP to websheets not only requires the addition of two more languages,
 		but also requires setting up a seperate server. With that said, SQL and PHP allow for some really cool stuff to be done
-		with a website. </p>
+		with a website. </p> <br/>
 
 	<p class="important"> Is it easy to do? </p>
 		
 		<p> Yes and no. If you are very passionate about it then, with time and practice, it becomes very easy. However, 
-		be prepared to spend hours upon hours figuring out how to do one small thing in the beginning. </p>
+		be prepared to spend hours upon hours figuring out how to do one small thing in the beginning. </p> <br/>
 
 	<p class="important"> Where do you build the website? </p>
 		
 		<p> The website will be built offline in a text editor. Together, we will be able to choose colors, fonts, images
 		then make adjustments until it is perfect. All of this is done, again, offline, so clients will not have access 
-		to a half-created website. </p>
+		to a half-created website. </p> <br/>
 	
 	<p class="important"> What happens after it is ready? </p>
 		
@@ -96,19 +103,19 @@ Services Explained
 		you see in the URL. For example, "HickoryWebDesigns.com". "HickoryWebDesigns" is my domain name, that has been purchased.
 		Since I own it, no one else can use it. This prevents traffic confusion; can you imagine going to a URL and getting
 		a different website each time! A generic name is usually created for you for free with a hosting service, but most 
-		companies prefer to have their own. Domain names, for the most part, are pretty inexpensive. </p>
+		companies prefer to have their own. Domain names, for the most part, are pretty inexpensive. </p> <br/>
 
 	<p class="important"> What if I don't understand any of this? </p>
 
 		<p> That's what we're here for! All of our web design packages include the creation of the website,
 		uploading it to a host and adding a domain name. However, some packages do not include the hosting
-		or domain name prices. </p>
+		or domain name prices. </p> <br/> 
 
 	<p class="important"> How do I get a logo? </p>
 		
 		<p> The best way to get a logo is to make one yourself. There are a few programs out there that will allow you to do 
 		this. If you are not confident creating one yourself, then finding a graphic artist or using a logo design website
-		is your best bet. Make sure your logo is trademarked! </p>
+		is your best bet. Make sure your logo is trademarked! </p> <br/>
 
 	<p class="important"> What about custom packages? </p>
 		
@@ -117,7 +124,9 @@ Services Explained
 		<br/> <br/>
 		Finally, we may offer services that are not listed on the site. Please feel free to ask about services not listed
 		if you need them. We will do everything we can to provide you with a full solution!
-		</p>
+		</p> <br/>
 	</div>
+</div>
+
 </body>
 </html>
