--- a/Services.html
+++ b/Services.html
@@ -10,7 +10,7 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training">
 		<meta name="description" content="Hickory Web Design Individual Services">
 		<meta charset="UTF-8">
-		<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
 
 </head>
 <!--____________________________________________________________Navigation______________________________________________________________--!>
