--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training, Del Rio, Texas, Southern Texas, Laughlin AFB">
 		<meta name="description" content="Hickory Web Design Home Page">
 		<meta charset="UTF-8">
-		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
+		<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 </head>
 <!--____________________________________________________________Navigation______________________________________________________________--!>
 
@@ -29,7 +29,9 @@
 
   	<div class="dropdown">
 		<div class='section navMenu'>
-    		<button class="dropbtn"> &#9776; Menu </button>
+    		<button class="dropbtn"> &#9776; Menu
+		      <i class="fa fa-caret-down"></i>
+		</button>
 		</div>
    			 <div class="dropdown-content">
 					<a href="index.html"> Home</a>
@@ -52,6 +54,12 @@
 	<div class='section header'>
 
  			<h1> Hickory Web Designs </h1> 
+	</div>
+
+
+	<div class='section mobile-1'>
+		Affordable, local website creation and implementation  <br/>
+
 	</div>
 
 	<div class='section content'>
@@ -79,6 +87,62 @@
 
 	</div>
 
+
+
+
+	<div class='section mobile-2'>
+	
+		<h3> Mobile First </h3>
+			<br/>
+
+		<img src="img/Mobile.jpeg" class="DesktopPics" alt="Mobile Devices">
+
+		Mobile First Development is founded on the idea that content is more important than flashy
+		animation and fancy buttons. Together, we will develop a minimalistic sight that gets
+		YOUR message, content and needs across. Then, Hickory Web Designs builds a functional,
+		responsive website that features and highlights what you want your audience to know!
+	
+	</div>
+
+	<div class='section mobile-pic'>
+
+		<img src="img/Mobile.jpeg" class="MobilePics" alt="Mobile Devices">
+
+	</div>
+
+	<div class='section  mobile-3'>
+
+		<h3> Responsive </h3>
+			<br/>
+
+		Responsive web development, although a little old-school, set the foundation for 
+		mobile first. This approach paved the way for actual mobile websites, rather than
+		the tiny desktop view that users can zoom in on. 
+	</div>
+
+	<div class='section mobile-2'>
+	
+		<h3> Every Step of the Way </h3>
+
+			<br/>
+		<a href="https://www.pexels.com/photo/architect-composition-data-demonstration-313691/">
+		<img src="img/TechHelp.jpeg" class="DesktopPics" alt="Here to Help!">
+		</a>
+
+		Here at Hickory Web Designs, we know how difficult building a website can be; 
+		we do it every day! Using our customer-first business model and our years of 
+		training and expertise, we make sure that the difficult part of setting up your
+		website falls on us, not you. Day or night, we're here to help!
+	
+	</div>
+
+	<div class='section mobile-pic'>
+
+		<a href="https://www.pexels.com/photo/architect-composition-data-demonstration-313691/">
+		<img src="img/TechHelp.jpeg" class="MobilePics" alt="Here to Help!">
+		</a>
+	</div>
+
 	<div class='section content'>
 
 			<h2> Office Professionals </h2>
@@ -96,9 +160,9 @@
 
 
 		<h1> Packages and Services </h1>
-
 	</div>
-
+	
+	<br/>
 
 	 <div class='section feature-1'>
 
@@ -122,6 +186,18 @@
 			<a href="Contact.html"> 
 			<img src="img/ContactLogo.png" class="SelectPic" alt="Contact Us"> </a>
 	</div>
+
+	
+	<footer>
+		<strong> Contact Us </strong>
+			<br/> <br/>
+		<strong> Call Us: </strong> <a href="tel:+15623704395"> (562) 370-4395 </a>
+			<br/> <br/>
+		<strong> Email Us: </strong> <a href="mailto:HickoryWebDesigns@Gmail.com" data-rel="external"> HickoryWebDesigns@Gmail.com </a>
+			<br/> <br/>
+		<strong> Request More Info </strong> <a href="ContactUs.html"> Here  </a>
+		
+	</footer>
 
 </div>
 
