--- a/Packages.html
+++ b/Packages.html
@@ -10,7 +10,7 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training">
 		<meta name="description" content="Hickory Web Designs offered packages and specials">
 		<meta charset="UTF-8">
-		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
+		<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 </head>
 <!--____________________________________________________________Navigation______________________________________________________________--!>
 
@@ -63,11 +63,25 @@
  				<h1> Services Packages </h1>
 	</div>
 
-	<div class='section Scontent'>
+	<div class="section mobile-2">
+		Hickory Web Designs knows how hard you work for your money. Why would we make you
+		waste it just to get extra services? Not only do we offer sever pre-made packages
+		for your convenience, we are always willing to create new custom packages to save you
+		time and ensure you get everything you need!
 
+	</div>
+
+	<div class="section mobile-1">
+	
+		Everyone LOVES Discounts!
+
+	</div>
+
+	<div class="section mobile-4">
 
 		<h2 id="Plat"> Web Development Package Platinum </h2>
 		<h4> (Currently Unavailable) </h4>
+	</div>
 			
 	<div class='section package'>
 		
@@ -91,15 +105,18 @@
 			</ul>
 	
 		</div>
-	</div>
+
 
 <!--_____________________________________________________________________________________________________________________--!>
 	
-	<div class='section Scontent'>
 
+
+	<div class="section mobile-4">
 
 		<h2 id="Gold"> Web Development Package Gold </h2>
 		<h4> (Currently Unavailable) </h4>
+
+	</div>
 
 	<div class='section package'>
 		
@@ -127,8 +144,18 @@
 
 <!--_____________________________________________________________________________________________________________________--!>
 
-	<div class='section Scontent'>
+	<div class='section mobile-pic'>
+
+		<img src="img/Keyboard.jpg" class="MobilePics" alt="Blue Laptop">
+
+	</div>
+
+
+
+	<div class="section mobile-4">
+
  		<h2 id="Silver"> Web Development Package Silver </h2> 
+	</div>
 	
 	<div class='section package'>
 
@@ -150,13 +177,15 @@
 		
 	
 		</div>
-	</div>
+	
 
 <!--_____________________________________________________________________________________________________________________--!>
 
-	<div class='section Scontent'>
+	
+	<div class="section mobile-4">
 
 		<h2 id="Bronze"> Web Development Package Bronze</h2> 
+	</div>
 
 	<div class='section package'>
 
@@ -177,13 +206,25 @@
 			
 		
 		</div>
-	</div>		
+		
 
 <!--_____________________________________________________________________________________________________________________--!>
 
-	<div class='section Scontent'>
+
+
+	<div class='section mobile-1'>
+
+	Get more out of your current website with our extended packages!
+	
+	<img src="img/Keyboard.jpg" class="DesktopPics" alt="Blue Laptop">
+
+	</div>
+
+	<div class="section mobile-4">
 
 		<h2 id="Opt"> Web Optimization Package </h2>
+
+	</div>
 
 	<div class='section package'>
 		
@@ -200,14 +241,17 @@
 		
 
 		</div>
-	</div>
+
 
 <!--_____________________________________________________________________________________________________________________--!>
 
-	<div class='section Scontent'>
+
+
+	<div class="section mobile-4">
 	
 		<h2 id="Train"> Training Package </h2>
 	
+	</div>
 
 	<div class='section package'>		
 		
@@ -228,7 +272,7 @@
 	
 
 		</div>
-	</div>
+
 
 
 <!--_____________________________________________________________________________________________________________________--!>
@@ -243,10 +287,20 @@
 		<br/>
 		
 		**Monthly payments available	</p>
-	
+
 		
 	<br/> <br/>
 
-</div>
+	<footer>
+		<strong> Contact Us </strong>
+			<br/> <br/>
+		<strong> Call Us: </strong> <a href="tel:+15623704395"> (562) 370-4395 </a>
+			<br/> <br/>
+		<strong> Email Us: </strong> <a href="mailto:HickoryWebDesigns@Gmail.com"> HickoryWebDesigns@Gmail.com </a>
+			<br/> <br/>
+		<strong> Request More Info </strong> <a href="ContactUs.html"> Here  </a>
+		
+	</footer>
+
 	</body>
 	</html>
