--- a/Services.html
+++ b/Services.html
@@ -10,7 +10,7 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training">
 		<meta name="description" content="Hickory Web Design Individual Services">
 		<meta charset="UTF-8">
-		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
+		<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
 </head>
 <!--____________________________________________________________Navigation______________________________________________________________--!>
@@ -52,157 +52,108 @@
 	<div class='section header'>	
 
 
- 			<h1> Services </h1>
+ 		<h1> Services </h1>
 
 	</div>
 
-	<div class='section content'>
-
-		<p> All services can be purchased individually or added on as packaged deals. Custom packages may be created. 
-		For more information about custom packages, please e-mail Jordon at jordon.r.meredith@gmail.com </p>
-
-	
-
-	</div>
-
-<!--__________________________________________________________________________________________--!>
-	
-	<div class='section content'>
-
-		<h2> Web Services </h2>
+	<div class='section mobile-2'>	
 		
-		<div class='section servs'>
+		Every business has unique needs when it comes to web design. 
+		That's why Hickory Web Designs offers a wide variety of services that can be 
+		purchased individually or used in custom packages that help save money on larger orders. <br> <br>
+	
+	</div>
+
+	<div class='section mobile-pic'>
+		<img src="img/HandShake.jpeg" alt="Buisness Hand Shake" class="MobilePics">
+	</div>
+
+	<div class='section mobile-2'>	
+	
+		<h3> Up Front Pricing </h3>
+
 		
-			<p class="important"> Basic Web Build </p>
-			Have a custom HTML or host provided website built based on content provided directly from you. Simply provide desired color scheme, simple layout design, and pre-written content. The rest is done for you! Basic Web Build covers up to 5 web pages with basic functionality. 
-				<br/>
-			Note: website hosting is not included. Typically, hosting will cost between $2 to $20 per month. Contact Hickory Web Designs for more information. 
-				<br/> <br/>
-			Cost: $99.99 &nbsp;  &nbsp; Additional pages: $9.99
-	
-		</div>
+		<img src="img/HandShake.jpeg" alt="Buisness Hand Shake" class="DesktopPics">
+		We also believe that secrets are never an effective way to start a business relationship. 
+		We are open and honest about our pricing up front. If the pricing is not available on the 
+		website because it requires a consultation, we are more than happy to provide you with the 
+		cost WITHOUT making you sign up for a newsletter, email subscription or membership. 
 
-		<div class='section servs'>
-	
-			<p class="important"> Web Analytics </p>
-			Add Web Analytics to a pre-existing site and have a 1 hour training seminar for up to 5 people.
-			Although Hickory Web Design typically recommends the FREE Google Analytics program, other 
-			web analytics programs qualify as well.
-				<br/> <br/>
-			Cost: $39.99
-
-		</div>
-
-		<div class='section servs'>
-	
-
-	
-			<p class="important"> Web Exposure </p>
-			Add extentions like Google AdWords or Facebook Pixel to your website. Both of these programs,
-			as well as a variety of other programs, help new clients find your website easier and more often.
-			Pair with an analytics service for best results. 
-				<br/>
-			Note: service covers TWO installations
-				<br/> <br/>
-			Cost: $39.99
-
-		</div>
 	</div>
-	
-
-<!--__________________________________________________________________________________________--!>
-	
-	<div class='section content'>
 
 
-	<h2> Mobile Application Services </h2>
+	<div class='section mobile-4'>	
 
-		<div class='section servs'>
+		View Our Services
 
-			<p class="important"> Mobile Application Development (coming soon) </p>
-			Have a basic, interactive mobile app built to compliment your site. Mobile apps are a great way
-			for customers to easily access and interact with your company on the go. 
-				<br/> <br/>
-			This service is temporarily unavailable
-
-		</div>
 	</div>
-	
 
-<!--__________________________________________________________________________________________--!>
-	
-	<div class='section content'>
+	<div class='section blank'> </div>
 
 	
-		<h2> Microsoft Office Services </h2>
+	<div class='section feature-4'>
+		
+		<a href="Svc_WebDesign.html"> Web Design Services </a>
 
-		<div class='section servs'>	
-
-			<p class="important"> MS Office Spreadsheet Creation </p>
-			Have re-usable templates created to make organizing data simple. This service does not
-			include use of VBA, but, instead, uses Excel's extensive repertoire of formula's and functions.
-				<br/> <br/>
-			Cost (first 3 sheets): $39.99 &nbsp; &nbsp; additional sheets: $7.99/sheet
-
-		</div>
-
-		<div class='section servs'>	
-
-			<p class="important"> ADVANCED MS Office Spreadsheet Creation </p>
-			Microsoft Office is an amazing program with thousands of ready to use features. However,
-			Microsoft made their product even better and integrated a programming language into their
-			suite called Visual Basics for Application (VBA). Using VBA, features that are not traditionally
-			supported by Excel can be programmed in to make spreadsheet use even easier. 
-				<br/>	
-			This service integrates VBA into pre-existing or new spreadsheets. 
-				<br/><br/>
-			Schedule a consultation for pricing
-
-		</div>
-
-		<div class='section servs'>		
-
-
-
-			<p class="important" id="Train2"> Office Training Seminars </p>
-			Want to learn more about office? Take one of our Microsoft (MS) Office classes to help your business succeed!
-				<br/>
-			Available options:
-			<ul>
-				<li> Office Suite Basics &ndash; 1 hour &ndash; $39.99
-					<ul>
-						<li> Covers: Excel, Word, Powerpoint, Access, and Outlook </li>
-						<li> Symbols and built-in functions </li>
-						<li> General work-place uses </li>
-						<li> MS Office verbiage </li>
-						<li> Up to 7 may attend </li>
-						<li> Provided at YOUR office (no travel required!) </li>
-					</ul>
-				<li> Office Suite Intermediate 	&ndash; 1 hour 	&ndash; $49.99
-					<ul>
-						<li> Covers: Excel, Word, Powerpoint, Access, and Outlook </li>
-						<li> Symbols and built-in functions </li>
-						<li> Advanced work-place usage </li>
-						<li> <q>Hidden</q> functionality </li>
-						<li> Up to 7 may attend </li>
-						<li> Provided at YOUR office (no travel required!) </li>	
-					</ul>			
-				<li> Office Suite Advanced &ndash; 1 hour &ndash; $79.99
-					<ul>
-						<li> Covers VBA programming basics </li>
-						<li> 1 may attend </li>
-					</ul>
-				<li> MS Office Specialist Training
-					<ul>
-						<li> Choose any MS Office Program and learn the basics
-						and advanced options for it! </li>
-					</ul>
-			</ul>
-		</div>
 	</div>
-	
+
+	<div class='section feature-4'>
+
+		Web Optimization Services
+
+	</div>
+
+	<div class='section feature-4'>
+
+		MS Office Services
+
+	</div>
+
+	<div class='section feature-4'>
+
+		Training Services
+
+	</div>
+
+	<div class='section feature-4'>
+
+		Web Maintenance Services
+
+	</div>
+
+	<div class='section feature-4'>
+
+		View All Services
+
+	</div>
+
+	<footer>
+		<strong> Contact Us </strong>
+			<br/> <br/>
+		<strong> Call Us: </strong> <a href="tel:+15623704395"> (562) 370-4395 </a>
+			<br/> <br/>
+		<strong> Email Us: </strong> <a href="mailto:HickoryWebDesigns@Gmail.com" data-rel="external"> HickoryWebDesigns@Gmail.com </a>
+			<br/> <br/>
+		<strong> Request More Info </strong> <a href="ContactUs.html"> Here  </a>
+		
+	</footer>
+
 </div>
-	<br/> <br/>
+</body>
+</html>
 
-	</body>
-	</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
