--- a/SvcInfo.html
+++ b/SvcInfo.html
@@ -10,6 +10,7 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Design, Office Training">
 		<meta name="description" content="Hickory Web Designs Services explained">
 		<meta charset="UTF-8">
+		<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
 </head>
 <!--____________________________________________________________Navigation______________________________________________________________-->
@@ -54,19 +55,28 @@
 	
 	</div>	
 
-	<div class='section content'>	
 
 	<h2> Q&A </h2>
 
+	<div class='section content'>
 
 	<p class="important"> What is web design? </p>
 
 		<p> Web design is the creation of web pages using standardized 'languages'. </p> <br/>
 
+	</div>
+
+	<div class='section content'>
+
 	<p class="important"> What are languages? </p>
 
 		<p> Languages, when it comes to web design are programming languages. Basically, they're languages that have been
 		created to communicate with the computer. There are many languages out there that all have different purposes. </p> <br/>
+	
+	</div>
+
+	<div class='section content'>
+
 
 	<p class="important"> What languages do websites use? </p>
 
@@ -82,16 +92,28 @@
 		but also requires setting up a seperate server. With that said, SQL and PHP allow for some really cool stuff to be done
 		with a website. </p> <br/>
 
+	</div>
+
+	<div class='section content'>
+
 	<p class="important"> Is it easy to do? </p>
 		
 		<p> Yes and no. If you are very passionate about it then, with time and practice, it becomes very easy. However, 
 		be prepared to spend hours upon hours figuring out how to do one small thing in the beginning. </p> <br/>
+
+	</div>
+
+	<div class='section content'>
 
 	<p class="important"> Where do you build the website? </p>
 		
 		<p> The website will be built offline in a text editor. Together, we will be able to choose colors, fonts, images
 		then make adjustments until it is perfect. All of this is done, again, offline, so clients will not have access 
 		to a half-created website. </p> <br/>
+
+	</div>
+
+	<div class='section content'>
 	
 	<p class="important"> What happens after it is ready? </p>
 		
@@ -105,17 +127,29 @@
 		a different website each time! A generic name is usually created for you for free with a hosting service, but most 
 		companies prefer to have their own. Domain names, for the most part, are pretty inexpensive. </p> <br/>
 
+	</div>
+
+	<div class='section content'>
+
 	<p class="important"> What if I don't understand any of this? </p>
 
 		<p> That's what we're here for! All of our web design packages include the creation of the website,
 		uploading it to a host and adding a domain name. However, some packages do not include the hosting
 		or domain name prices. </p> <br/> 
 
+	</div>
+
+	<div class='section content'>
+
 	<p class="important"> How do I get a logo? </p>
 		
 		<p> The best way to get a logo is to make one yourself. There are a few programs out there that will allow you to do 
 		this. If you are not confident creating one yourself, then finding a graphic artist or using a logo design website
 		is your best bet. Make sure your logo is trademarked! </p> <br/>
+
+	</div>
+
+	<div class='section content'>
 
 	<p class="important"> What about custom packages? </p>
 		
@@ -126,6 +160,17 @@
 		if you need them. We will do everything we can to provide you with a full solution!
 		</p> <br/>
 	</div>
+
+	<footer>
+		<strong> Contact Us </strong>
+			<br/> <br/>
+		<strong> Call Us: </strong> <a href="tel:+15623704395"> (562) 370-4395 </a>
+			<br/> <br/>
+		<strong> Email Us: </strong> <a href="mailto:HickoryWebDesigns@Gmail.com" data-rel="external"> HickoryWebDesigns@Gmail.com </a>
+			<br/> <br/>
+		<strong> Request More Info </strong> <a href="ContactUs.html"> Here  </a>
+		
+	</footer>
 </div>
 
 </body>
