--- a/Services.html
+++ b/Services.html
@@ -93,7 +93,7 @@
 	
 	<div class='section feature-4'>
 		
-		<a href="Svc_WebDesign.html"> Web Design Services </a>
+		<a href="Svc_WebDesign"> Web Design Services </a>
 
 	</div>
 
