--- a/Services.html
+++ b/Services.html
@@ -73,7 +73,7 @@
 		<h3> Up Front Pricing </h3>
 
 		
-		<img src="img/HandShake.jpeg" alt="Buisness Hand Shake" class="DesktopPics">
+		<img src="img/HandShake.jpeg" alt="Buisness Hand Shake" class="DesktopPics-R">
 		We also believe that secrets are never an effective way to start a business relationship. 
 		We are open and honest about our pricing up front. If the pricing is not available on the 
 		website because it requires a consultation, we are more than happy to provide you with the 
@@ -93,25 +93,25 @@
 	
 	<div class='section feature-4'>
 		
-		<a href="Svc_WebDesign.html"> Web Design Services </a>
+		<a href="Svc/Svc_WebDesign.html"> Web Design Services </a>
 
 	</div>
 
 	<div class='section feature-4'>
 
-		Web Optimization Services
+		<a href="Svc/Svc_WebOpt.html"> Web Optimization Services </a>
 
 	</div>
 
 	<div class='section feature-4'>
 
-		MS Office Services
+		<a href="Svc/Svc_Office.html"> MS Office Services </a>
 
 	</div>
 
 	<div class='section feature-4'>
 
-		Training Services
+		<a href="Svc/Svc_Training.html"> Training Services </a>
 
 	</div>
 
@@ -123,7 +123,7 @@
 
 	<div class='section feature-4'>
 
-		View All Services
+		<a href="Svc/Svc_All.html"> View All Services </a>
 
 	</div>
 
