--- a/index.html
+++ b/index.html
@@ -87,15 +87,12 @@
 
 	</div>
 
-
-
-
 	<div class='section mobile-2'>
 	
 		<h3> Mobile First </h3>
 			<br/>
 
-		<img src="img/Mobile.jpeg" class="DesktopPics" alt="Mobile Devices">
+		<img src="img/Mobile.jpeg" class="DesktopPics-L" alt="Mobile Devices">
 
 		Mobile First Development is founded on the idea that content is more important than flashy
 		animation and fancy buttons. Together, we will develop a minimalistic sight that gets
@@ -109,6 +106,42 @@
 		<img src="img/Mobile.jpeg" class="MobilePics" alt="Mobile Devices">
 
 	</div>
+
+ 
+	<div class='section header'>
+
+
+		<h1> View Our <br> Packages and Services </h1>
+	</div>
+
+	<div class="blank"> </div>
+	
+	<br/>
+
+	 <div class='section feature-1'>
+
+			<a href="Packages.html">
+			<img src="img/PackagesLogo.png" class="SelectPic" alt="View Packages"> </a>
+
+  	</div>
+
+
+  	<div class='section feature-2'>
+	
+			<a href="Services.html">
+			<img src="img/ServicesLogo.png" class="SelectPic" alt="View Services"> </a>
+
+	</div>
+
+
+  	<div class='section feature-3'>
+
+
+			<a href="Contact.html"> 
+			<img src="img/ContactLogo.png" class="SelectPic" alt="Contact Us"> </a>
+	</div>
+
+
 
 	<div class='section  mobile-3'>
 
@@ -126,7 +159,7 @@
 
 			<br/>
 		<a href="https://www.pexels.com/photo/architect-composition-data-demonstration-313691/">
-		<img src="img/TechHelp.jpeg" class="DesktopPics" alt="Here to Help!">
+		<img src="img/TechHelp.jpeg" class="DesktopPics-R" alt="Here to Help!">
 		</a>
 
 		Here at Hickory Web Designs, we know how difficult building a website can be; 
@@ -156,36 +189,6 @@
 
 	</div>
 
-	<div class='section header'>
-
-
-		<h1> Packages and Services </h1>
-	</div>
-	
-	<br/>
-
-	 <div class='section feature-1'>
-
-			<a href="Packages.html">
-			<img src="img/PackagesLogo.png" class="SelectPic" alt="View Packages"> </a>
-
-  	</div>
-
-
-  	<div class='section feature-2'>
-	
-			<a href="Services.html">
-			<img src="img/ServicesLogo.png" class="SelectPic" alt="View Services"> </a>
-
-	</div>
-
-
-  	<div class='section feature-3'>
-
-
-			<a href="Contact.html"> 
-			<img src="img/ContactLogo.png" class="SelectPic" alt="Contact Us"> </a>
-	</div>
 
 	
 	<footer>
